<resources>
    <string name="app_name">Latte — Savings</string>
    <string name="forgot">Forgot Password? Click here</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="assets">Savings you have earned</string>
    <string name="asset_img">--</string>
    <string name="toolbar">Latte — Savings</string>
    <string name="slogan">Earn the highest yield in the world.</string>
    <string name="forgot_hint">Enter your email to reset password.</string>
    <string name="reset">Send Reset</string>
    <string name="cancel_reset">Cancel</string>
    <string name="invoice_disclaimer">Enter the amount you want to deposit. We will send confirmation invoice to your email! Deposits take 4-5 days to clear.</string>
    <string name="withdrawal_disclaimer">Enter the amount you want to withdraw. Withdrawals take 4-5 days to clear.</string>

    <string name="confirmation">Please give us 1 to 2 days to confirm your account.</string>
    <string name="invoice_hint">Enter amount to deposit.</string>
    <string name="withdrawal_hint">Enter amount to withdrawal.</string>

    <string name="verify_confirm">Confirm your bank account</string>
    <string name="verify_confirm_2">Before we can accept any deposits, we need to verify you through your bank first.</string>
    <string name="verify_confirm_3">Please enter Bank Account Number &amp; Routing Number</string>
    <string name="verify_confirm_4">Almost there, within 1–2 business days we will deposit 2 small amounts into your bank account. Please confirm those amounts below over the next few days.</string>
    <string name="verify_sums_confirm">Verify</string>
    <string name="verify_sums_cancel">Close</string>
    <string name="verify_ban_confirm">Confirm</string>
    <string name="verify_ban_close">Close</string>
    <string name="nosavings">You haven\'t earned any savings with Latte yet. Savings are paid out on the 1st of every month.</string>

    <string-array name="daily_watch">
    </string-array>
    <string-array name="spinner">
        <item>All-time Returns</item>
        <item>2021 Returns</item>
<!--        <item>2020 Returns</item>-->
<!--        <item>2019 Returns</item>-->
<!--        <item>2018 Returns</item>-->
<!--        <item>2017 Returns</item>-->
<!--        <item>2016 Returns</item>-->
<!--        <item>2015 Returns</item>-->
<!--        <item>2014 Returns</item>-->
<!--        <item>2013 Returns</item>-->
<!--        <item>2012 Returns</item>-->
<!--        <item>2011 Returns</item>-->
<!--        <item>2011 Returns</item>-->
<!--        <item>2010 Returns</item>-->
<!--        <item>2009 Returns</item>-->
<!--        <item>2008 Returns</item>-->
<!--        <item>2007 Returns</item>-->
<!--        <item>2006 Returns</item>-->
<!--        <item>2005 Returns</item>-->
<!--        <item>2004 Returns</item>-->
<!--        <item>2003 Returns</item>-->
<!--        <item>2002 Returns</item>-->
<!--        <item>2001 Returns</item>-->
<!--        <item>2000 Returns</item>-->
<!--        <item>1999 Returns</item>-->
<!--        <item>1998 Returns</item>-->
<!--        <item>1997 Returns</item>-->
<!--        <item>1996 Returns</item>-->
<!--        <item>1995 Returns</item>-->
<!--        <item>1994 Returns</item>-->
<!--        <item>1993 Returns</item>-->
<!--        <item>1992 Returns</item>-->
<!--        <item>1991 Returns</item>-->
<!--        <item>1990 Returns</item>-->
    </string-array>
    <string-array name="spinner_recents">
        <item>All Moves</item>
        <item>December 2021 Moves</item>
        <item>November 2021 Moves</item>
        <item>October 2021 Moves</item>
        <item>September 2021 Moves</item>
        <item>August 2021 Moves</item>
        <item>July 2021 Moves</item>
        <item>June 2021 Moves</item>
        <item>May 2021 Moves</item>
        <item>April 2021 Moves</item>
        <item>March 2021 Moves</item>
        <item>February 2021 Moves</item>
        <item>January 2021 Moves</item>
        <!--        <item>2020 Returns</item>-->
    </string-array>
    <string-array name="array_name2">
        <item>Cumulative Returns</item>
    </string-array>

    <string name="how_to_buy">How do you buy these stocks?</string>
</resources>